--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "tezosExample",
+  "name": "tezos-example",
   "version": "1.0.0",
   "description": "Tezos Example Box =================",
-  "dependencies": {
-    "@taquito/taquito": "^6.0.3-beta.0",
+  "dependencies": {},
+  "devDependencies": {
+    "@taquito/taquito": "^6.2.0-beta.1",
     "promise-retry": "^1.1.1"
   },
-  "devDependencies": {},
   "scripts": {
     "wait-for-sandbox": "node ./scripts/sandbox/waitForNetwork.js",
     "start-sandbox": "bash ./scripts/sandbox/start_sandbox.sh && npm run wait-for-sandbox",
